TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA at 
telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
 
tbaMUD 3.56
[May 17 2008] - Rumble
  Fixed a possible crash bug in qedit. (thanks Jamdog)
  Bug fix: Page command was paging when the character was not found and sending a NOPERSON message when he was found.
[May 15 2008] - Rumble
  Fixed a bug where deleting the last quest in qedit caused a crash. (thanks Jamdog)
  Updated autorun to fix a random syslog numbering bug. (thanks Zizazat)
[May 10 2008] - Rumble
  Fixed another typo, added a check for !NPC do_gen_comm, and changed do_return to only run autowiz if level changes. (thanks Fizban)
[May 08 2008] - Rumble
  Cleaned up numerous warnings found by adding -Wextra -Wcast-qual -Wshadow -Wno-unused flags.
[May 05 2008] - Rumble
  Changed command do_list_llog_entries to normal function, it was not being used as a command. (thanks Rhade)
  Removed several useless if checks. (thanks Elanthis)
  Fixed zmalloc to work on 64 bit machines.
[May 04 2008] - Rumble
  Fixed numerous warnings for gcc -g -O2 -W -Wshadow -Wcast-qual flags.
  Fixed zpurge mudlog to use zone vnum not rnum. (thanks Jamdog)
  Fix to parse_mobile conversion to 128 bits. (thanks Jamdog)
  Changed autorun.sh from 9091 to 4000. (thanks John Smith)
[Apr 27 2008] - Rumble
  Removed some defunct gemote code. (thanks Fizban)
[Apr 26 2008] - Rumble
  Added README.BSD. (thanks Blix)
  Cleaned up act.comm.c, mobs can now use comm channels. (thanks Rhade)
[Apr 07 2008] - Rumble
  Fixed typos in lib/misc/messages and socials.new
[Apr 04 2008] - jeremyosborne
  Minor Bugfix: All game configuration settings now reference the world config
structure, not the individual config variables found in config.c.
[Mar 22 2008] - Rumble
  Added lib/world/qst/ directory, index, index.mini, and 0.qst.
[Mar 08 2008] - jeremyosborne